# aocmanager

./: .gitignore  Cargo.toml  flake.nix
src/: configuration.rs  main.rs
src/templates/: gleam.rs  mod.rs  variant.rs  zig.rs
templates/gleam/: README.md  flake.nix  gleam.toml
templates/gleam/src/: runner.gleam  solution.gleam
templates/gleam/test/: runner_test.gleam
templates/zig/: build.zig  flake.nix
templates/zig/src/: main.zig  runner.zig
